css/map.css
html, body {
  font-family: Arial, sans-serif;
  height: 100%;
  margin: 0;
  padding: 0;
}


/* Show error infos when the browser has trouble load Google Map API  */

.map-error-info {
  display: block;
  font-size: 3em;
  position: relative;
  left: 0px;
  right: 0px;
  top: 35%;
}


/* css for the div to open or close side panel */

#toggle-side-panel {
  border-radius: 2px;
  position: fixed;
  top: 2%;
  left: 0;
  padding: 1.8em 0.8em;
  background: white;
  border: 1px solid #969393;
  z-index: 1;
  transition: 0.5s
}


/*
 * When side panel is closed
 * this icon shows in toggle div
 */

.open-panel-icon {
  content: "";
  position: absolute;
  top: 40%;
  left: 40%;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent transparent #555;
}


/*
 * When side panel is opened
 * this icon shows in toggle div
 */

.close-panel-icon {
  visibility: hidden;
  content: "";
  position: absolute;
  top: 40%;
  left: 15%;
  border-width: 5px;
  border-style: solid;
  border-color: transparent #555 transparent transparent;
}


/*
 * css for popuptext span to show tips info
 * it is hidden by default
 * it will be showed when cursor over toggle button and disappear when cursor leave it
 */

#toggle-side-panel .popuptext {
  visibility: hidden;
  width: 10em;
  line-height: 100%;
  background-color: #555;
  color: #fff;
  text-align: left;
  border-radius: 2px;
  padding: 6px 2px;
  position: absolute;
  z-index: 1;
  bottom: 25%;
  left: 130%;
}


/* Show tips info in popuptext span when cursor over toggle div */

#toggle-side-panel .show {
  visibility: visible;
}


/* left triangle arrow beside popuptext span */

#toggle-side-panel .popuptext::after {
  content: "";
  position: absolute;
  top: 30%;
  left: -6%;
  border-width: 5px;
  border-style: solid;
  border-color: transparent #555 transparent transparent;
}



/*
 * The side panel
 * its width is 0 by default
 */

.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
  background-color: #111;
  overflow-x: hidden;
  transition: 0.5s;
}


/* Change sidenav width to 25% when it has been opend */

.open {
  width: 25%;
}


/*
 * searchbox
 * it contains a search input
 * a clear button
 * and a clear float div
 */

.sidenav .searchbox {
  padding: 0 1em;
  background: #4387fd;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 -1px 0px rgba(0, 0, 0, 0.02);
}

.sidenav .searchbox .search-input {
  float: left;
  display: inline-block;
  border-radius: 5px;
  border: none;
  padding: 0 0.4em;
  margin: 1em 0 1em 1em;
  line-height: 4.5em;
  width: 90%;
  outline: none;
}

.sidenav .searchbox span {
  display: inline-block;
  float: left;
  background: white;
  line-height: 2.5em;
  margin: 1em 0;
  width: 10%;
  text-align: center;
}

.glyphicon-remove {
  position: absolute;
  right: 10%;
  top: 0;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}


/* clear float */

.clear {
  clear: both;
  height: 0;
  line-height: 0;
  font-size: 0;
}


/* titles ul element store all default locations */

.sidenav .places {
  padding: 0 1em;
}


/* store every default locations */

.sidenav .places li {
  padding: 1em 0.4em;
  text-decoration: none;
  font-size: 14px;
  color: #818181;
  display: block;
  transition: 0.3s
}


/* map container div*/

#map {
  float: left;
  width: 100%;
  height: 100%;
}


/* streetview div */

#pano {
  width: 200px;
  height: 200px;
}

